<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/border">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="307dp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewProductname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/productName"
        android:textColor="#0C0808"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textviewProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pruductPrice"
        android:textColor="#100A0A"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonLess"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewProductname"
        app:layout_constraintTop_toBottomOf="@+id/textViewProductname" />

    <TextView
        android:id="@+id/textViewProductDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ProductDescr"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewProductname"
        app:layout_constraintTop_toBottomOf="@+id/textviewProductPrice"
        app:layout_constraintVertical_bias="0.048" />

    <ImageButton
        android:id="@+id/imageButtonLess"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#FFCC33"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/textViewProductQuantity"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/minus" />

    <ImageButton
        android:id="@+id/imageButtonMore"
        android:layout_width="52dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:background="#FFCC33"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonLess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonLess"
        app:srcCompat="@drawable/plus" />

    <TextView
        android:id="@+id/textViewProductQuantity"
        android:layout_width="30dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/quantityLable"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonMore"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonMore"
        app:layout_constraintTop_toTopOf="@+id/imageButtonMore" />
</androidx.constraintlayout.widget.ConstraintLayout>